# fax-station-schedule

./: .gitignore  Cargo.toml
crates/schedule/: Cargo.toml
crates/schedule/src/: lib.rs
crates/schedule/tests/: test_load.rs
crates/schedule/tests/test_files/: test.csv
gui/: Cargo.toml
gui/src/: main.rs
schedules/: schedule.csv
src/: main.rs
