[package]
name = "station-schedule"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
chrono = "0.4"
schedule = { version = "0.1.0", path="./crates/schedule"}

[workspace]
members = ["cli", "gui"]
resolver = "3"

[workspace.dependencies]
egui = "0.33.3"
egui-winit = "0.33.3"
egui_extras= "0.33.3"
eframe = "0.33.3"


